Bug 599882.  Make baselines not depend on relative positioning of kids.  r=dbaron